--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 USER_ID=jcsinisterra1994
 PAT=932ed8a62a394a7a8cb28b08a40f3acb
-APP_ID=my-first-application
-MODEL_ID=411af70c45f745808d8108f12a36db3b
+APP_ID=face-detection
+MODEL_ID=6dc7e46bc9124c5c8824be4822abe105
